--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Git Hub</title>
 </head>
 <body>
+    <h1>Full stack web development with javascript</h1>
  <h2>Happy jurney to Github</h2>   
  <h3>gittu tumu kothay</h3>
+ <p>this is peragraph and send this github</p>
 </body>
 </html>
